# HelloCMake

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: goodbye.cpp  main.cpp
greeter/: CMakeLists.txt
greeter/src/: Greeter.cpp
include/: HelloCMake.h
src/: HelloCMake.cpp  main.cpp
